--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.344.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4",
-    "gh-pages": "^6.1.1"
+    "vite": "^5.1.4"
   }
 }
